accept IDE suggestion